# cc-poetry-minimal

./: .flake8  .pre-commit-config.yaml  README.md  cookiecutter.json  poe_scripts.py  pyproject.toml
hooks/: post_gen_project.py  pre_gen_hooks.py
tests/: test_creation.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  README.md  poe_scripts.py  pyproject.toml
{{cookiecutter.repo_name}}/.brainstorm/: .gitignore
