[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.github_username}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "21.11b1"
pre-commit = "^2.16.0"
ipython = "^7.30.1"
pytest = "^6.2.5"
MonkeyType = "^21.5.0"
coverage = "^6.2"
poethepoet = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
