[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.github_username}} <{{cookiecutter.email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autoflake = "1.4"
isort = "5.10.1"
black = "22.3.0"
pre-commit = "^2.16.0"
ipython = "^7.30.1"
pytest = "^6.2.5"
MonkeyType = "^21.5.0"
coverage = "^6.2"
poethepoet = "^0.11.0"
fire = "^0.4.0"
typeguard = "^2.13.3"
flake8-docstrings = "^1.6.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poe.tasks]
_isort = "isort ."
_black = "black ."
_autoflake = "autoflake -i -r --remove-duplicate-keys --remove-unused-variables --remove-all-unused-imports --expand-star-imports ."
beautify = { sequence = [
  "_autoflake",
  "_isort",
  "_black",
], help = "autoflake + isort + black" }
coverage = { cmd = "python -m fire poe_scripts coverage", help = "check = [ --help, --skip_test, --in_browser]" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
